<resources>
    <string name="app_name">Hiilikori</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Teppo Teräsniska</string>
    <string name="nav_header_subtitle">teris@niskojensuku.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Asetukset</string>
    <string name="log_out">Kirjaudu ulos</string>

    <string name="menu_home">Koti</string>
    <string name="menu_gallery">Historia</string>
    <string name="menu_slideshow">Ostoslista</string>
    <string name="menu_foodbank">Ruokapankki</string>
    <string name="menu_profile">Omat tiedot</string>
</resources>