<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings_1"
            android:icon="@drawable/history"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_settings_2"
            android:icon="@drawable/grocery_list"
            android:title="@string/menu_slideshow"/>
        <item
            android:id="@+id/nav_settings_3"
            android:icon="@drawable/food_bank"
            android:title="@string/menu_foodbank"/>
        <item
            android:id="@id/nav_settings_4"
            android:icon="@drawable/profile_icon"
            android:title="@string/menu_profile"/>
    </group>
</menu>