<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.menuyhdelle.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings_1"
        android:name="com.example.menuyhdelle.ui.history.HistoryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_settings_2"
        android:name="com.example.menuyhdelle.ui.shoppinglist.ShoppingListFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_shoppinglist" />
    <fragment
        android:id="@+id/nav_settings_3"
        android:name="com.example.menuyhdelle.ui.foodbank.FoodbankFragment"
        android:label="@string/menu_foodbank"
        tools:layout="@layout/fragment_foodbank" />
    <fragment
        android:id="@+id/nav_settings_4"
        android:name="com.example.menuyhdelle.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>